Handle interactions from both guilds and channels